# AoF

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
src/aof_pipeline/: cli.py  pipeline.py  providers.py  types.py
